# Assistant

./: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lcu.rs  lib.rs  shaco.rs
src-tauri/src/lcu/: lcu_event.rs  listener.rs  types.rs  utils.rs
src-tauri/src/lcu/types/: champion_mastery.rs  rank_info.rs  summoner_info.rs
src-tauri/src/resource/: champ_dict.json
src-tauri/src/shaco/: error.rs  rest.rs  utils.rs  ws.rs
src/background/: background.ts  gameFlow.ts  index.html
src/background/types/: index.d.ts
src/background/utils/: config.ts  createWindow.ts  createWindows.ts
src/main/: index.html  index.vue  main.ts  main.vue  style.css
src/main/api/: aboutSummoner.ts
src/main/components/: dashboard.vue  masteryChamp.vue  navigation.vue  setting.vue  sponsor.vue
src/main/router/: index.ts
src/main/types/: SummonerTypes.d.ts  notice.d.ts
src/main/utils/: notice.ts  request.ts  theme.ts
src/main/views/home/: index.vue  startGame.vue
src/queryMatch/: index.html  index.vue  main.ts  main.vue  style.css
src/queryMatch/components/: infoView.vue  queryHeader.vue
src/queryMatch/store/: index.ts
src/queryMatch/types/: store.d.ts
src/queryMatch/utils/: baseMatch.ts
src/resources/: champList.ts
