[package]
name = "assistant"
version = "0.1.0"
description = "A Tauri App用于学习"
authors = ["Ikaros"]
license = ""
repository = ""
edition = "2024"
rust-version = "1.93.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-http = "2.5.6"
tauri-plugin-process = "2.3.1"
tauri-plugin-shell = "2.3.4"
once_cell = "1.21.3"
reqwest = { version = "0.13.1", features = ["json", "native-tls"] }
tokio = { version = "1.49.0", features = [] }
thiserror = "2.0.18"
sysinfo = "0.37.2"
base64 = "0.22.1"
futures-util = "0.3.31"
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
native-tls = "0.2.14"
